src/test/ui/borrowck/bindings-after-at-or-patterns-slice-patterns-box-patterns.stderr
error: cannot borrow value as mutable because it is also borrowed as immutable
  --> $DIR/bindings-after-at-or-patterns-slice-patterns-box-patterns.rs:38:9
   |
LL |         ref foo @ [.., ref mut bar] => (),
   |         -------^^^^^^^^-----------^
   |         |              |
   |         |              mutable borrow, by `bar`, occurs here
   |         immutable borrow, by `foo`, occurs here

error: cannot borrow value as mutable because it is also borrowed as immutable
  --> $DIR/bindings-after-at-or-patterns-slice-patterns-box-patterns.rs:122:9
   |
LL |         ref foo @ Some(box ref mut s) => (),
   |         -------^^^^^^^^^^^^---------^
   |         |                  |
   |         |                  mutable borrow, by `s`, occurs here
   |         immutable borrow, by `foo`, occurs here

error[E0382]: borrow of moved value: `x`
  --> $DIR/bindings-after-at-or-patterns-slice-patterns-box-patterns.rs:20:5
   |
LL | fn bindings_after_at_slice_patterns_move_binding(x: [String; 4]) {
   |                                                  - move occurs because `x` has type `[String; 4]`, which does not implement the `Copy` trait
LL |     match x {
LL |         a @ [.., _] => (),
   |         ----------- value moved here
...
LL |     &x;
   |     ^^ value borrowed here after move

error[E0502]: cannot borrow `x` as immutable because it is also borrowed as mutable
  --> $DIR/bindings-after-at-or-patterns-slice-patterns-box-patterns.rs:30:5
   |
LL |         ref mut foo @ [.., _] => Some(foo),
   |         --------------------- mutable borrow occurs here
...
LL |     &x;
   |     ^^ immutable borrow occurs here
...
LL |     drop(r);
   |          - mutable borrow later used here

error[E0502]: cannot borrow `x` as mutable because it is also borrowed as immutable
  --> $DIR/bindings-after-at-or-patterns-slice-patterns-box-patterns.rs:52:5
   |
LL |         [ref foo @ .., ref bar] => Some(foo),
   |          ------------ immutable borrow occurs here
...
LL |     &mut x;
   |     ^^^^^^ mutable borrow occurs here
...
LL |     drop(r);
   |          - immutable borrow later used here

error[E0502]: cannot borrow `x` as mutable because it is also borrowed as immutable
  --> $DIR/bindings-after-at-or-patterns-slice-patterns-box-patterns.rs:64:5
   |
LL |         ref foo @ [.., ref bar] => Some(foo),
   |         ----------------------- immutable borrow occurs here
...
LL |     &mut x;
   |     ^^^^^^ mutable borrow occurs here
...
LL |     drop(r);
   |          - immutable borrow later used here

error[E0382]: borrow of moved value: `x`
  --> $DIR/bindings-after-at-or-patterns-slice-patterns-box-patterns.rs:78:5
   |
LL | fn bindings_after_at_or_patterns_move(x: Option<Test>) {
   |                                       - move occurs because `x` has type `Option<Test>`, which does not implement the `Copy` trait
LL |     match x {
LL |         foo @ Some(Test::Foo | Test::Bar) => (),
   |         ---------------------------------
   |         |
   |         value moved here
   |         value moved here
...
LL |     &x;
   |     ^^ value borrowed here after move

error[E0502]: cannot borrow `x` as mutable because it is also borrowed as immutable
  --> $DIR/bindings-after-at-or-patterns-slice-patterns-box-patterns.rs:88:5
   |
LL |         ref foo @ Some(Test::Foo | Test::Bar) => Some(foo),
   |         ------------------------------------- immutable borrow occurs here
...
LL |     &mut x;
   |     ^^^^^^ mutable borrow occurs here
...
LL |     drop(r);
   |          - immutable borrow later used here

error[E0502]: cannot borrow `x` as immutable because it is also borrowed as mutable
  --> $DIR/bindings-after-at-or-patterns-slice-patterns-box-patterns.rs:100:5
   |
LL |         ref mut foo @ Some(Test::Foo | Test::Bar) => Some(foo),
   |         ----------------------------------------- mutable borrow occurs here
...
LL |     &x;
   |     ^^ immutable borrow occurs here
...
LL |     drop(r);
   |          - mutable borrow later used here

error[E0502]: cannot borrow `x` as mutable because it is also borrowed as immutable
  --> $DIR/bindings-after-at-or-patterns-slice-patterns-box-patterns.rs:114:5
   |
LL |         ref foo @ Some(box ref s) => Some(foo),
   |         ------------------------- immutable borrow occurs here
...
LL |     &mut x;
   |     ^^^^^^ mutable borrow occurs here
...
LL |     drop(r);
   |          - immutable borrow later used here

error[E0382]: borrow of moved value: `x`
  --> $DIR/bindings-after-at-or-patterns-slice-patterns-box-patterns.rs:136:5
   |
LL | fn bindings_after_at_slice_patterns_or_patterns_moves(x: [Option<Test>; 4]) {
   |                                                       - move occurs because `x` has type `[Option<Test>; 4]`, which does not implement the `Copy` trait
LL |     match x {
LL |         a @ [.., Some(Test::Foo | Test::Bar)] => (),
   |         -------------------------------------
   |         |
   |         value moved here
   |         value moved here
...
LL |     &x;
   |     ^^ value borrowed here after move

error[E0502]: cannot borrow `x` as mutable because it is also borrowed as immutable
  --> $DIR/bindings-after-at-or-patterns-slice-patterns-box-patterns.rs:146:5
   |
LL |         ref a @ [ref b @ .., Some(Test::Foo | Test::Bar)] => Some(a),
   |         ------------------------------------------------- immutable borrow occurs here
...
LL |     &mut x;
   |     ^^^^^^ mutable borrow occurs here
...
LL |     drop(r);
   |          - immutable borrow later used here

error[E0502]: cannot borrow `x` as mutable because it is also borrowed as immutable
  --> $DIR/bindings-after-at-or-patterns-slice-patterns-box-patterns.rs:158:5
   |
LL |         ref a @ [ref b @ .., Some(Test::Foo | Test::Bar)] => Some(b),
   |                  ---------- immutable borrow occurs here
...
LL |     &mut x;
   |     ^^^^^^ mutable borrow occurs here
...
LL |     drop(r);
   |          - immutable borrow later used here

error[E0502]: cannot borrow `x` as mutable because it is also borrowed as immutable
  --> $DIR/bindings-after-at-or-patterns-slice-patterns-box-patterns.rs:172:5
   |
LL |         [_, ref a @ Some(box ref b), ..] => Some(a),
   |             ----------------------- immutable borrow occurs here
...
LL |     &mut x;
   |     ^^^^^^ mutable borrow occurs here
...
LL |     drop(r);
   |          - immutable borrow later used here

error[E0502]: cannot borrow `x` as mutable because it is also borrowed as immutable
  --> $DIR/bindings-after-at-or-patterns-slice-patterns-box-patterns.rs:188:5
   |
LL |         [_, ref a @ Some(box Test::Foo | box Test::Bar), ..] => Some(a),
   |             ------------------------------------------- immutable borrow occurs here
...
LL |     &mut x;
   |     ^^^^^^ mutable borrow occurs here
...
LL |     drop(r);
   |          - immutable borrow later used here

error[E0502]: cannot borrow `x` as immutable because it is also borrowed as mutable
  --> $DIR/bindings-after-at-or-patterns-slice-patterns-box-patterns.rs:202:5
   |
LL |         [_, ref mut a @ Some(box Test::Foo | box Test::Bar), ..] => Some(a),
   |             ----------------------------------------------- mutable borrow occurs here
...
LL |     &x;
   |     ^^ immutable borrow occurs here
...
LL |     drop(r);
   |          - mutable borrow later used here

error[E0502]: cannot borrow `x` as mutable because it is also borrowed as immutable
  --> $DIR/bindings-after-at-or-patterns-slice-patterns-box-patterns.rs:216:5
   |
LL |         ref a @ [_, ref b @ Some(box Test::Foo | box Test::Bar), ..] => Some(a),
   |         ------------------------------------------------------------ immutable borrow occurs here
...
LL |     &mut x;
   |     ^^^^^^ mutable borrow occurs here
...
LL |     drop(r);
   |          - immutable borrow later used here

error: aborting due to 17 previous errors

Some errors have detailed explanations: E0382, E0502.
For more information about an error, try `rustc --explain E0382`.
